fixed the navbar links and edited it their location. fixed the logic behind a logo

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -114,9 +114,9 @@ footer #copyright {
     width: 25vw;
   }
 
-  #navbar .company-logo {
-    width: 25vw;
-  }
+  /*#navbar .company-logo {*/
+  /*  width: 25vw;*/
+  /*}*/
 
   /*End Navbar*/
 
@@ -151,9 +151,9 @@ footer #copyright {
     width: 50vw;
   }
 
-  #navbar .company-logo {
-    width: 50vw;
-  }
+  /*#navbar .company-logo {*/
+  /*  width: 50vw;*/
+  /*}*/
 
   /*Navbar End*/
 
